// Copyright 2023 The Chromium Authors
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto2";

package sensitivity;

option java_package = "org.chromium.chrome.browser.sensitivity";

option optimize_for = LITE_RUNTIME;

message SensitivityData {
  optional bool is_sensitive = 1;
}
